# yi-agent

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/hooks/: check-progress-sync.sh
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: ci.yml  release.yml
codex-rs/: Cargo.toml
codex-rs/crates/codex-core/: Cargo.toml
codex-rs/crates/codex-core/src/: lib.rs
codex-rs/crates/codex-llm/: Cargo.toml
codex-rs/crates/codex-llm/src/: lib.rs
codex-rs/crates/codex-mcp/: Cargo.toml
codex-rs/crates/codex-mcp/src/: lib.rs
codex-rs/crates/codex-rep/: Cargo.toml
codex-rs/crates/codex-rep/src/: main.rs
codex-rs/crates/codex-store/: Cargo.toml
codex-rs/crates/codex-store/src/: lib.rs
codex-rs/crates/codex-tools/: Cargo.toml
codex-rs/crates/codex-tools/src/: lib.rs
docs/plans/: 2026-07-18-yi-agent-core-design.md  2026-07-18-yi-agent-core-impl.md  2026-07-19-ci-cd-design.md  2026-07-19-ci-cd-impl.md  2026-07-19-progress-sync-hook-design.md  2026-07-19-project-management-design.md  2026-07-19-yi-agent-llm-design.md  2026-07-19-yi-agent-llm-impl.md  2026-07-19-yi-agent-tools-design.md  2026-07-19-yi-agent-tools-impl.md  2026-07-19-yi-agent-web-tools-design.md  2026-07-19-yi-agent-web-tools-impl.md  2026-07-24-openai-provider-impl.md  2026-07-24-web-config-ui-impl.md  2026-07-24-yi-agent-core-streaming-cancel-token-design.md  2026-07-24-yi-agent-core-streaming-cancel-token-impl.md  2026-07-24-yi-agent-tui-cancel-design.md  2026-07-24-yi-agent-tui-design.md  2026-07-24-yi-agent-tui-features-design.md  2026-07-24-yi-agent-tui-features-impl.md  2026-07-24-yi-agent-tui-impl.md  2026-07-25-web-config-ui-restructure-design.md  2026-07-25-web-config-ui-restructure-impl.md
docs/project-management/: README.md  ci-cd.md  tooling.md  yi-agent-core.md  yi-agent-llm.md  yi-agent-tools.md
yi-agent-rs/: Cargo.toml  justfile
yi-agent-rs/crates/yi-agent/: Cargo.toml
yi-agent-rs/crates/yi-agent-core/: Cargo.toml
yi-agent-rs/crates/yi-agent-core/src/: agent.rs  lib.rs  message.rs  provider.rs  tool.rs
yi-agent-rs/crates/yi-agent-llm/: Cargo.toml
yi-agent-rs/crates/yi-agent-llm/src/: lib.rs
yi-agent-rs/crates/yi-agent-llm/src/anthropic/: client.rs  error.rs  mod.rs  stream.rs  types.rs
yi-agent-rs/crates/yi-agent-llm/src/openai/: client.rs  error.rs  mod.rs  stream.rs  types.rs
yi-agent-rs/crates/yi-agent-llm/tests/: integration.rs  openai_integration.rs
yi-agent-rs/crates/yi-agent-mcp/: Cargo.toml
yi-agent-rs/crates/yi-agent-mcp/src/: lib.rs
yi-agent-rs/crates/yi-agent-store/: Cargo.toml
yi-agent-rs/crates/yi-agent-store/src/: lib.rs
yi-agent-rs/crates/yi-agent-tools/: Cargo.toml
yi-agent-rs/crates/yi-agent-tools/src/: context.rs  error.rs  lib.rs
yi-agent-rs/crates/yi-agent-tools/src/fs/: edit.rs  glob.rs  grep.rs  mod.rs  path_util.rs  read.rs  write.rs
yi-agent-rs/crates/yi-agent-tools/src/shell/: bash.rs  blocklist.rs  mod.rs
yi-agent-rs/crates/yi-agent-tools/src/web/: bocha.rs  fetch.rs  mod.rs  provider.rs  search.rs
yi-agent-rs/crates/yi-agent-tools/tests/: integration.rs  web_integration.rs
yi-agent-rs/crates/yi-agent-web/: Cargo.toml
yi-agent-rs/crates/yi-agent-web/src/: api.rs  config_meta.rs  env_file.rs  lib.rs
yi-agent-rs/crates/yi-agent-web/src/assets/: index.html
yi-agent-rs/crates/yi-agent-web/tests/: api_test.rs
yi-agent-rs/crates/yi-agent/src/: app.rs  compact.rs  config.rs  file_ref.rs  input.rs  main.rs  tracing_init.rs
yi-agent-rs/crates/yi-agent/src/render/: inline.rs  mod.rs
yi-agent-rs/yi-agent-cli/: .gitignore  entry.js  package.json
