[workspace]
resolver = "2"
members = [
    "crates/codex-rep",
    "crates/codex-core",
    "crates/codex-llm",
    "crates/codex-tools",
    "crates/codex-mcp",
    "crates/codex-store",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/gongyichen/codex-rep"
authors = ["Yichen Gong <yichen.gong@gua.com>"]

[workspace.dependencies]
# 内部 crate 间依赖,统一版本管理
codex-core = { path = "crates/codex-core" }
codex-llm = { path = "crates/codex-llm" }
codex-tools = { path = "crates/codex-tools" }
codex-mcp = { path = "crates/codex-mcp" }
codex-store = { path = "crates/codex-store" }

# 共享公共依赖(后续按需添加)
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# tokio = { version = "1", features = ["full"] }
# anyhow = "1"
# thiserror = "2"
# tracing = "0.1"
