[workspace]
resolver = "2"
members = [
    "crates/yi-agent",
    "crates/yi-agent-core",
    "crates/yi-agent-llm",
    "crates/yi-agent-tools",
    "crates/yi-agent-mcp",
    "crates/yi-agent-store",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/YichenGong/yi-agent"
authors = ["Yichen Gong <yichen.gong@gua.com>"]

[workspace.dependencies]
# 内部 crate 间依赖,统一版本管理
yi-agent-core = { path = "crates/yi-agent-core" }
yi-agent-llm = { path = "crates/yi-agent-llm" }
yi-agent-tools = { path = "crates/yi-agent-tools" }
yi-agent-mcp = { path = "crates/yi-agent-mcp" }
yi-agent-store = { path = "crates/yi-agent-store" }

# 共享公共依赖
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
serde_json = "1"
reedline = "0.38"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
