[package]
name = "yi-agent-llm"
description = "LLM provider implementations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
yi-agent-core = { workspace = true }

# HTTP + 流式
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", default-features = false }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tracing
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
