[package]
name = "yi-agent-tools"
description = "Built-in tools: filesystem, shell, web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
yi-agent-core = { workspace = true }
