[package]
name = "yi-agent-tools"
description = "Built-in tools: filesystem, shell, web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
yi-agent-core = { workspace = true }

# 异步
async-trait = "0.1"
tokio = { version = "1", features = ["process", "time", "fs", "io-util"] }
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误
thiserror = "2"

# FS 工具
glob = "0.3"
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
