[package]
name = "yi-agent"
description = "A coding agent CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "yi-agent"
path = "src/main.rs"

[dependencies]
yi-agent-core = { workspace = true }
yi-agent-llm = { workspace = true }
yi-agent-tools = { workspace = true }
yi-agent-mcp = { workspace = true }
yi-agent-store = { workspace = true }
